--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,7 @@ spring:
             hibernate:
                 format_sql: true
         database-platform: org.hibernate.dialect.H2Dialect
+    mvc:
+      throw-exception-if-no-handler-found: true
+    resources:
+      add-mappings: false
