--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,19 @@ buildscript {
         kotlinVersion = '1.2.21'
         springBootVersion = '1.5.10.RELEASE'
         swaggerVersion = '2.8.0'
+        gradleDockerPlugin = '0.13.0'
     }
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("gradle.plugin.com.palantir.gradle.docker:gradle-docker:${gradleDockerPlugin}")
     }
 }
 
@@ -18,6 +23,7 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'com.palantir.docker'
 
 group = 'org.rizki.mufrizal.boot.swagger'
 version = '0.0.1-SNAPSHOT'
@@ -33,15 +39,16 @@ repositories {
     mavenCentral()
 }
 
-version = '1.0'
+jar {
+    baseName = 'boot-swagger-basic-authentication'
+    version = '0.0.1'
+}
 
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Implementation-Title': 'Boot Swagger Basic Authentication', 'Implementation-Version': version, 'Main-Class': 'org.rizki.mufrizal.boot.swagger.BootSwaggerApplication'
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+docker {
+    name "rizkimufrizal/${jar.baseName}"
+    tags 'latest'
+    files jar.archivePath
+    buildArgs(['JAR_FILE': "${jar.archiveName}"])
 }
 
 dependencies {
