--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,14 +22,21 @@ spring:
     # spring hibernate
     jpa:
         generate-ddl: true
-        show-sql: true
+        show-sql: false
         hibernate:
             ddl-auto: update
         properties:
             hibernate:
-                format_sql: true
+                format_sql: false
         database-platform: org.hibernate.dialect.H2Dialect
     mvc:
       throw-exception-if-no-handler-found: true
     resources:
       add-mappings: false
+
+logging:
+    level:
+        org:
+            springframework:
+                web: ERROR
+            hibernate: ERROR
